Added necessary files for getting company list from the api. Added viper classes and extensions.

--- a/Club Demo/Club Demo/Base.lproj/Main.storyboard
+++ b/Club Demo/Club Demo/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Company List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Club_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CompanyListViewController" customModule="Club_Demo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,7 +26,7 @@
         <!--Navigation Controller-->
         <scene sceneID="8dF-jg-Luq">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="64S-xz-YRf" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="CompanyListNavigationViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="64S-xz-YRf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nJS-dX-jXv">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
